package com.kailash.tutorial.swing.ch27.gui;

public interface StringListener {
    void textEmitted(String text);
}
